--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">AndroidDemo</string>
-    <string name="hello_world">Hello world, This is github demo! change something to test github eclipse plugin</string>
+    <string name="hello_world">Hello wssorld, This is github demo! change something to test github eclipse plugin</string>
     <string name="action_settings">Settings</string>
 
 </resources>
