--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">AndroidDemo</string>
-    <string name="hello_world">sdddddHello Chase, always remember keep calm and carry on</string>
+    <string name="hello_world">sdddddHello Chase, always remember keep calm and carry on. Update to Git 2013/7/1</string>
     <string name="action_settings">Settings</string>
 
 </resources>
